Fix the folder structure

--- a/index.html
+++ b/index.html
@@ -8,8 +8,14 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
-      <p>{{ description }}</p>
+      <div class="product">
+        <div class="product-image">
+          <img :src="image" :alt="altText" />
+        </div>
+        <div class="product-info">
+          <h1>{{ product }}</h1>
+        </div>
+      </div>
     </div>
 
     <script src="https://unpkg.com/vue"></script>
